Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,5 +11,5 @@ pool:
 
 steps:
 - pwsh: ./HelloWorld.ps1
-- download: current
+- publish: $(System.DefaultWorkingDirectory)/bin/WebApp
   artifact: WebApp
