Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,3 +11,7 @@ pool:
 
 steps:
 - pwsh: ./HelloWorld.ps1
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)' 
+    artifactName: # 'drop'
