Set up gradle stuff

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,12 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-- pwsh: ./HelloWorld.ps1
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(Pipeline.Workspace)' 
-    artifactName: 'drop'
+language: java
+jdk:
+- oraclejdk7
+script:
+- gradle build
+- gradle test
