Use gradle test in pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,18 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- pwsh: ./HelloWorld.ps1
+#- pwsh: ./HelloWorld.ps1
+- task: Gradle@2
+  inputs:
+    workingDirectory: ''
+    gradleWrapperFile: 'gradlew'
+    gradleOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.11'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: true
+    testResultsFiles: '**/TEST-*.xml'
+    tasks: 'build'
 - task: PublishPipelineArtifact@1
   inputs:
     targetPath: '$(Pipeline.Workspace)'
